elastic-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"addonmanager.kubernetes.io/mode":"Reconcile","version":"v7.3.0"},"name":"elasticsearch-logging","namespace":"eka"},"spec":{"replicas":1,"selector":{"matchLabels":{"k8s-app":"elasticsearch-logging","version":"v7.3.0"}},"template":{"metadata":{"labels":{"k8s-app":"elasticsearch-logging","version":"v7.3.0"}},"spec":{"containers":[{"env":[{"name":"discovery.seed_hosts","value":"137.134.56.125"}],"image":"docker [...]
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
    version: v7.4.2
  name: elasticsearch-logging
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging
      version: v7.4.2
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging
        version: v7.4.2
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - env:
        - name: http.host
          value: 0.0.0.0
        - name: transport.host
          value: 127.0.0.1
        - name: bootstrap.memory_lock
          value: "true"
        - name: ES_JAVA_OPTS
          value: -Xms1g -Xmx1g
        image: docker.elastic.co/elasticsearch/elasticsearch:7.4.2
        imagePullPolicy: IfNotPresent
        name: elasticsearch-logging
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        resources:
          limits:
            cpu: "2"
          requests:
            cpu: 100m
        volumeMounts:
          - name: elastic-pv-storage   ###### STORAGE ---->>
            mountPath: /usr/share/elasticsearch/data
#          - name: kibana-pv-storage
#            mountPath: /usr/local/bin/kibana-docker
      volumes:
        - name: elastic-pv-storage #### <<---- STORAGE
          persistentVolumeClaim:
           claimName: elastic-pv-claim ## CLAIM
      dnsPolicy: ClusterFirst
      restartPolicy: Always
