kibana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: kibana
  name: kibana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      labels:
        app: kibana
    spec:
      containers:
      - env:
        - name: SERVER_NAME
          value: eka.altyn-i.kz
        - name: ELASTICSEARCH_HOSTS
          value: http://elasticsearch-logging:9200
        image: kibana:7.4.2
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
