ingress-elastic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic-ingress
spec:
  rules:
  - host: 
    http:
      paths:
        - backend:
            serviceName: elasticsearch-logging
            servicePort: 9200
